profile list and alert function changes

--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -85,6 +85,7 @@
 }
 
 .user{
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;  
@@ -101,4 +102,30 @@
     padding: .6rem;
     margin: .5rem;
     border-radius: 50%;
+}
+
+.user .profile-list{
+    position: absolute;
+    bottom: -33rem;
+    /* right: -500px; */
+    width: 15rem;
+    height: 30rem;
+    background-color: white;
+    border: 1px solid black;
+    padding: 1rem 2rem;
+    z-index: 10;
+    transition: 2s linear;
+}
+.user .profile-list .items{
+    padding: 8px 0rem;
+}
+.user .profile-list .items:hover{
+    background-color: rgba(5, 0, 0, 0.096);
+}
+.user .profile-list .items i{
+    padding-right: 1rem;
+}
+.user .profile-list a{
+    text-decoration: none;
+    color: black;
 }
