--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,34 @@
     transform: rotate(360deg);
   }
 }
+
+
+.alert{
+  width: 15rem;
+  border: 1px solid black;
+  position: absolute;
+  background-color: white;
+  left: 3rem;
+  top: 0px;
+  border-radius: 5px;
+  transition: .5s linear; 
+}
+.alert p{
+  margin: 1rem 1rem;
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+.alert .line{
+  width: 0%;
+  height: 7px;
+  background-color: rgb(40, 188, 40);
+  /* animation: line-animation 2s 1 linear; */
+}
+@keyframes line-animation {
+  0% {
+    width: 100%;
+  }
+  100%{
+    width: 0%;
+  }
+}
